# ZastBeacon

./: .gitignore  README.md  ignore  startup.sh
Raspberry/: README.md  install.sh
Raspberry/gate-controller/: server.js
Raspberry/node-ble/: index.js  mobility.js  package-lock.json  package.json  zastbeacon.js
Raspberry/node-ble/Characteristics/: bus.js  configure.js  gate.js  handshake.js  test.js
Raspberry/node-ble/Config/: bluetooth.json  socket.json
Raspberry/node-ble/Encryption/: day10.json  day11.json  day13.json  day2.json  day20.json  day25.json  day26.json  day27.json  day28.json  day29.json  day31.json  day4.json  day5.json  day6.json  day8.json
Raspberry/node-ble/ZastUSB/: CMakeLists.txt
Raspberry/node-ble/ZastUSB/Headers/: UDPServer.h  USBManager.h  ZaBeaconCommand.hpp
Raspberry/node-ble/ZastUSB/Source/: UDPServer.cpp  USBManager.cpp
ZastGate/: CMakeLists.txt
ZastGate/Headers/: UDPClient.h  USBManager.h
ZastGate/Source/: UDPClient.cpp  USBManager.cpp  main.cpp
ZastUSB/: CMakeLists.txt
ZastUSB/Headers/: USBManager.h  ZaBeaconCommand.hpp
ZastUSB/Source/: UDPServer.cpp
gate-controller/: app.js  package.json
node-ble/: app.js  handshake.js  helper.js  mobility.js  package.json  zastcore.js
node-ble/Characteristics/: test.js
node-ble/Encryption/: day1.json  day12.json  day14.json  day15.json  day16.json  day17.json  day18.json  day19.json  day21.json  day22.json  day23.json  day24.json  day3.json  day30.json  day7.json  day9.json
node-ble/GPIOBoard/: GPIOBoard.cpp  GPIOBoard.h  main.cpp
node-ble/Sockets/: client.js  server.js
(+1 files in other folders)
